When moving a virtual server to a new system via a restore, if any required PHP modules that were installed on the old system are missing on the new, they will be automatically installed (where possible). In addition, you will be notified if any required PHP versions are missing.
When editing a virtual server without a private IP address, one can be added that is associated with an existing interface on the system.
When a domain is restored to a system with a new IP address, the IP in the SPF record is updated. Also, any NS records are updated to match the new system.
When a virtual server is moved under a new owner, the Apache directives that control which user CGIs and PHP scripts run as are properly updated.
Fixed bugs in the FAQMasterFlex installer that prevented it's config file from being setup properly.
Re-wrote all code that locks configuration files managed by Virtualmin. This improves the coverage of Webmin logging, and makes it much safer to perform multiple operations on the same or different domains at once.
Outgoing email relayed via the Virtualmin system is now counted towards the sender's domain's bandwidth limit, unless disabled on the Bandwidth Monitoring page.
Moved the option that controls if mailbox users can have .procmailrc files to the Spam and Virus Delivery page, where it is easier to find and is applied immediately.
The wrapper scripts for running PHP via CGI or fastCGI now have the immutable flag set on Linux, to prevent accidental deletion by domain owners.
New features in this version of Virtualmin and any plugins are shown on the System Information page, if using the Virtualmin theme.
---- Changes since 3.52 ----
Updated the WordPress installer to version 2.3.3, and WordPress MU to 1.3.3.
The --quota and --mail-quota parameters to create-user.pl are now optional. If missing the defaults for the domain or template will be used.
Added the check-config.pl command line script for validating the Virtualmin configuration.